add next branch into the CI workflow

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -2,9 +2,13 @@ name: ci
 
 on:
     push:
-        branches: [main]
+        branches: 
+        - main
+        - next
     pull_request:
-        branches: [main]
+        branches: 
+        - main
+        - next
 
 jobs:
     backport:
